Add AWS Cognito
- Added AWS Cognito to allow user registration and login
- Created new controllers and routes for registration and login
- Update API Docs to reflect new paths
